[gd_scene load_steps=4 format=3 uid="uid://be343nm3f2dao"]

[ext_resource type="Script" path="res://level_completed.gd" id="1_7wf3e"]
[ext_resource type="Texture2D" uid="uid://bp58drjdgvxsi" path="res://addons/controller_icons/assets/key/enter_alt.png" id="2_gwtnp"]
[ext_resource type="Script" path="res://addons/controller_icons/objects/TextureRect.gd" id="3_xo2kn"]

[node name="LevelCompleted" type="ColorRect"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.498039)
script = ExtResource("1_7wf3e")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "LEVEL COMPLETED!"

[node name="RetryButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
text = "retry"

[node name="NextLevelButton" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 16)
layout_mode = 2
text = "next level"

[node name="ControllerTextureRect" type="TextureRect" parent="."]
custom_minimum_size = Vector2(24, 24)
offset_left = 232.0
offset_top = 152.0
offset_right = 256.0
offset_bottom = 176.0
focus_neighbor_top = NodePath("../CenterContainer/VBoxContainer/NextLevelButton")
focus_neighbor_bottom = NodePath("../CenterContainer/VBoxContainer/RetryButton")
focus_mode = 2
texture = ExtResource("2_gwtnp")
expand_mode = 1
script = ExtResource("3_xo2kn")
path = "ui_accept"
max_width = 24

[node name="Label" type="Label" parent="ControllerTextureRect"]
layout_mode = 0
offset_left = 32.0
offset_top = 8.0
offset_right = 101.0
offset_bottom = 32.0
scale = Vector2(0.5, 0.5)
text = "Select"
vertical_alignment = 1

[connection signal="pressed" from="CenterContainer/VBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/NextLevelButton" to="." method="_on_next_level_button_pressed"]
